# ML

./: CMakeLists.txt  main.cpp
mnist/: CMakeLists.txt
mnist/demo/: helpers.cpp  helpers.h
mnist/tests/: test_mlp.cpp
